# demo_HRI

./: CMakeLists.txt  README.md  package.xml
config/: control_trajectory_execution_action_client.yaml  control_trajectory_execution_action_server.yaml
csv/: trajectory_example.csv
include/: control_trajectory_execution_action_client.h
launch/: HRI_whole_pipeline.launch  HRI_whole_pipeline_rosbag.launch  demo_HRI.launch
scripts/: trajectory_csv_example.py
src/: control_trajectory_execution_action_client.cpp
